no longer create a special "Other Places" category for dangling placemarks inside a folder. this was sacrificing too much performance and code clarity, especially in kml parsing, to make up for consistent visual treatment.

--- a/app/modules/map/css/common.css
+++ b/app/modules/map/css/common.css
@@ -8,6 +8,10 @@ body.fullscreen #tabscontainer {
     padding: 6px 12px;
 }
 
+.results a.placemark {
+    background-image: url(/modules/map/images/map-button-map.png);
+}
+
 /* used in map view - custom controls overlaying google maps, detail - controls below map image */
 #mapcontrols a {
     width: 40px;
